--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Strike Latino 2 - Tabla & Juegos</title>
+  <title>PELOTEROS 20 - Tabla & Juegos</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
 </head>
 <body>
   <div class="container">
-    <h1>⚾ Strike Latino 2</h1>
+    <h1>⚾ PELOTEROS 20</h1>
     <p class="subtitle">Tabla de posiciones y juegos del día</p>
 
     <div id="loading" class="hidden">
@@ -108,4 +108,5 @@
     loadData();
   </script>
 </body>
+
 </html>
